--- a/v1/views/campgrounds.ejs
+++ b/v1/views/campgrounds.ejs
@@ -1,13 +1,32 @@
 <% include partials/header %>
 
-<h1>this is the campgrounds page</h1>
+<div class="container">
+  <div class="container"><header class="jumbotron">
+    <h1>Welcome to YelpCamp</h1>
+    <p>View our handpicked campsites from all around the world</p>
+    <p>
+      <a class="btn btn-primary btn-lrg" href="/campgrounds/new">Add new Campground</a>
+    </p></div>
 
-<% campgrounds.forEach(function(campground){ %>
-  <div class="">
-    <h4><%= campground.name %></h4>
-    <img src="<%= campground.image %>" alt="">
+  </header>
+
+  <div class="row text-center" style="display: flex; flexwrap: wrap;">
+    <% campgrounds.forEach(function(campground){ %>
+      <div class="col-md-3 col-sm-6">
+        <div class="thumbnail">
+          <img src="<%= campground.image %>">
+          <div class="caption">
+            <h4><%= campground.name %>
+          </div>
+        </div>
+      </div>
+      <% }); %>
   </div>
-<% }); %>
+</div>
+
+
+
+</div>
 
 
 <% include partials/footer %>
