--- a/v1/views/campgrounds.ejs
+++ b/v1/views/campgrounds.ejs
@@ -1,14 +1,32 @@
 <% include partials/header %>
+  <nav class="navebar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand"href="/">YelpCamp</a>
+      </div>
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="/">Login</a></li>
+          <li><a href="/">Sign Up</a></li>
+          <li><a href="/">Log Out</a></li>
+        </ul>
+      </div>
+    </div>
+
+  </nav>
 
 <div class="container">
-  <div class="container"><header class="jumbotron">
-    <h1>Welcome to YelpCamp</h1>
-    <p>View our handpicked campsites from all around the world</p>
-    <p>
-      <a class="btn btn-primary btn-lrg" href="/campgrounds/new">Add new Campground</a>
-    </p></div>
-
+  <header class="jumbotron">
+    <div class="container">
+      <h1>Welcome to YelpCamp</h1>
+      <p>View our handpicked campsites from all around the world</p>
+      <p>
+        <a class="btn btn-primary btn-lrg" href="/campgrounds/new">Add new Campground</a>
+      </p>
+    </div>
   </header>
+
+
 
   <div class="row text-center" style="display: flex; flexwrap: wrap;">
     <% campgrounds.forEach(function(campground){ %>
@@ -16,17 +34,15 @@
         <div class="thumbnail">
           <img src="<%= campground.image %>">
           <div class="caption">
-            <h4><%= campground.name %>
+            <h4><%= campground.name %></h4>
           </div>
         </div>
       </div>
-      <% }); %>
+    <% }); %>
   </div>
 </div>
 
 
-
-</div>
 
 
 <% include partials/footer %>
